--- a/README.org
+++ b/README.org
@@ -7,6 +7,8 @@ Emacs configuration created for heavy Orgmode users among non-programmers.
 
 [[./images/demo.png]]
 
+[[./images/demo2.png]]
+
 * Install
 1.  Install Emacs
    #+begin_src shell
