--- a/literate-config.org
+++ b/literate-config.org
@@ -29,7 +29,7 @@
        ;; vc-gutter         ; vcs diff in the fringe
        ;; vi-tilde-fringe   ; fringe tildes to mark beyond EOB
        ;;window-select     ; visually switch windows
-       workspaces        ; tab emulation, persistence & separate workspaces
+       ;;workspaces        ; tab emulation, persistence & separate workspaces
        zen               ; distraction-free coding or writing
 
        :editor
@@ -515,6 +515,17 @@ Change these key-value with your prefer.
    '((emacs-lisp . t)
      (shell . t)
      (gnuplot . t)))
+
+
+  ;; I find it easier to use Apple’s Command-i, Command-b, Command-u to set italics, bold, underline. In Org:
+  (add-hook 'org-mode-hook
+            '(lambda ()
+                (define-key org-mode-map (kbd "s-i") (kbd "\C-c \C-x \C-f /"))
+                (define-key org-mode-map (kbd "s-b") (kbd "\C-c \C-x \C-f *"))
+                (define-key org-mode-map (kbd "s-u") (kbd "\C-c \C-x \C-f _"))
+                ))
+
+  (setq org-archive-location "archive.org::")
 
   (setq org-agenda-prefix-format '((agenda . "%t %s ")
                                    (todo   . " ")))
