--- a/literate-config.org
+++ b/literate-config.org
@@ -111,7 +111,8 @@
 ;;(package! org-roam-server)
 (package! dired-narrow)
 (package! valign)
-
+(package! rime)
+(package! aggressive-fill-paragraph)
 #+end_src
 
 * Config of everything(config.el)
@@ -403,8 +404,8 @@
 *** Other ui config
 #+begin_src emacs-lisp :tangle "~/.doom.d/config.el"
 (add-hook! org-mode :append
-           #'visual-line-mode
-           #'visual-fill-column-mode
+           ;; #'visual-line-mode
+           ;; #'visual-fill-column-mode
            #'variable-pitch-mode)
 
 (menu-bar-mode -1) ;; minimal chrome
@@ -812,4 +813,17 @@
 (use-package! valign
   :config
   (add-hook 'org-mode-hook #'valign-mode))
+
+(use-package! rime
+  :custom
+  (default-input-method "rime")
+  (rime-librime-root "~/.emacs.d/librime/dist")
+  (rime-emacs-module-header-root "/usr/local/Cellar/emacs-mac/emacs-27.1-mac-8.0/include")
+  :config
+  (setq rime-user-data-dir "~/Library/Rime"))
+
+(use-package! aggressive-fill-paragraph-mode
+  :recipe (:host github :repo "davidshepherd7/aggressive-fill-paragraph-mode")
+  :config
+  (add-hook 'org-mode-hook #'aggressive-fill-paragraph-mode))
 #+end_src
