--- a/literate-config.org
+++ b/literate-config.org
@@ -593,7 +593,13 @@
 #+begin_src emacs-lisp :tangle "~/.doom.d/config.el"
 
 (setq Tex-command-default "XeLaTeX")
-
+(setq org-latex-pdf-process
+      '(
+        "xelatex -interaction nonstopmode -output-directory %o %f"
+        "xelatex -interaction nonstopmode -output-directory %o %f"
+        "xelatex -interaction nonstopmode -output-directory %o %f"
+        "rm -fr %b.out %b.log %b.tex auto"
+        ))
 (with-eval-after-load 'ox-latex
   (add-to-list 'org-latex-classes
                '("ctexart" "\\documentclass[11pt]{ctexart}"
