--- a/README.org
+++ b/README.org
@@ -6,6 +6,12 @@ Emacs configuration created for heavy Orgmode users among non-programmers.
 
 [[./images/demo2.png]]
 
+* Before install
+更新代理配置源，提升下载安装速度。
+
+#+begin_src shell
+git config --global url.https://github.com.cnpmjs.org/.insteadOf https://github.com/
+#+end_src
 * Install
 1.  Install Emacs
    #+begin_src shell
@@ -40,11 +46,11 @@ Emacs configuration created for heavy Orgmode users among non-programmers.
 
 
 
-* Ideas from [[mailto:tanshq@gmail.com][@tanmo]]  [7/10]
+* Ideas from [[mailto:tanshq@gmail.com][@tanmo]]  [8/10]
 
 - [ ] add contrast images for every configuration
-- [ ] Fix org-roam-server config
 - [ ] Remap keybindings: Cmd+1/2/3/4 to headline1/2/3/4
+- [X] Fix org-roam-server config
 - [X] Remap keybindings: Cmd+i/b/u  -> italic/bold/underlined
 - [X] Hide tags
 - [X] Hide export options
