--- a/literate-config.org
+++ b/literate-config.org
@@ -180,6 +180,21 @@
 (add-hook! 'org-mode-hook #'mixed-pitch-mode)
 
 (setq mixed-pitch-variable-pitch-cursor nil)
+#+end_src
+** Personal functions
+
+#+begin_src emacs-lisp :tangle "~/.doom.d/config.el" :mkdirp yes
+(defun dcf (cf0 g r n)
+  "calculate dcf value
+
+CF0为初始净利润， g为预计净利润年复合增长率
+
+r 为未来现金流折现率， n为企业未来存活年数"
+  (interactive "nCF0: \nng: \nnr: \nnn: ")
+  (let* ((g1 (expt (1+ g) n))
+          (r1  (expt (1+ r) (- n)))
+          (cf1 (* cf0 g1 r1)))
+    (/ (- cf0 cf1) (- r g))))
 
 #+end_src
 
